# krajc

./: .gitignore  Cargo.toml  Dockerfile  capute(2024-07-27.10-41-53).opt  capute(2024-07-27.10-51-07).opt  capute(2024-07-27.10-52-59).opt
bevy-deps/bevy_macro_utils/: Cargo.toml
bevy-deps/bevy_ptr/: Cargo.toml
bevy-deps/bevy_reflect/: Cargo.toml
bevy-deps/bevy_reflect/derive/: Cargo.toml
bevy-deps/bevy_tasks/: Cargo.toml
bevy-deps/bevy_utils/: Cargo.toml
bevy-deps/bevy_utils/macros/: Cargo.toml
bevy-deps/bevy_utils/src/: lib.rs
bevy-ecs/: Cargo.toml
bevy-ecs/macros/: Cargo.toml
bevy-ecs/macros/src/: component.rs  lib.rs
bevy-ecs/src/: bundle.rs  change_detection.rs  component.rs  lib.rs  main.rs
bevy-ecs/src/observer/: runner.rs
bevy-ecs/src/query/: access.rs  state.rs
bevy-ecs/src/schedule/: schedule.rs
bevy-ecs/src/schedule/executor/: multi_threaded.rs
bevy-ecs/src/storage/: table.rs
bevy-ecs/src/system/: mod.rs  system_registry.rs
bevy-ecs/src/system/commands/: mod.rs
bevy-ecs/src/world/: entity_ref.rs  mod.rs  unsafe_world_cell.rs
ecs/: build.zig  build.zig.zon
ecs/src/: archetype.zig  entity.zig  lib.zig  view.zig
ecs/src/examples/: hellow.zig  test.zig
krajc/: Cargo.toml  build.zig  build.zig.zon  new_file.txt
krajc-glfw/: build.zig
krajc-runtime/src/: main.rs
krajc-wgpu/: build.zig.zon
krajc/src/: glfw_event_callbacks.zig  lib.rs  main.zig  math.zig  prelude.zig  shader.wgsl  utils.zig
krajc/src/abi/: mod.rs  system_interface.rs
krajc/src/ecs/: mod.rs  prelude.zig
krajc/src/ecs/systems/: function_system.zig  schedule.zig  system.zig  system_param.zig
krajc/src/ecs/systems/params/: query.zig  res.zig
krajc/src/engine_runtime/: input.rs  mod.rs
krajc/src/engine_runtime/engine_cache/: engine_cache.rs
krajc/src/engine_runtime/schedule_manager/: runtime_schedule.rs  schedule.rs
krajc/src/engine_runtime/schedule_manager/system_params/: mod.rs  system_engine.rs  system_local.rs  system_param.rs  system_query.rs  system_resource.rs
krajc/src/engine_state/: asset_manager.zig  resource.zig
krajc/src/engine_state/events/: input.zig
krajc/src/physics/: mod.rs  physics_world.rs
krajc/src/physics/components/: collider.rs  general.rs
krajc/src/physics/systems/: collider.rs  rigid_body.rs
krajc/src/rendering/: asset.rs  material.rs  mod.rs  prelude.zig  text.rs
krajc/src/rendering/asset_loaders/: file_loader.zig  file_resource_loader.rs  mod.rs
krajc/src/rendering/buffer_manager/: managed_buffer.rs  mod.rs
krajc/src/rendering/builtin_materials/light_material/: instance_data.rs
krajc/src/rendering/builtin_materials/texture_material/: instance_data.rs  material.rs  mod.rs
krajc/src/rendering/camera/: camera.rs
krajc/src/rendering/data/: rendering_state.zig
krajc/src/rendering/managers/: input.rs  mod.rs  new.rs  render.rs  resize.rs  update.rs  window.rs
krajc/src/rendering/mesh/: mesh.rs  mesh.rs.bak
krajc/src/rendering/render_command/: mod.rs
krajc/src/rendering/render_entity/: mod.rs
krajc/src/rendering/systems/: general.rs  render.zig
krajc/src/rendering/texture/: texture.rs
resources/shaders/: shader_light.wgsl  shader_texture.wgsl
shared-lib/src/: lib.rs
src/: lib.rs  main.rs  typed_addr.rs
src/abi/: system_interface.rs
src/ecs/: ecs_manager.rs
src/engine_runtime/: input.rs  mod.rs  target_fps.rs
src/engine_runtime/engine_cache/: engine_cache.rs  mod.rs
src/engine_runtime/engine_data/: data_refs.rs  data_storage.rs  mod.rs
src/engine_runtime/engine_state_manager/: generic_state_manager.rs  mod.rs
src/engine_runtime/schedule_manager/: mod.rs  runtime_schedule.rs  schedule.rs
src/engine_runtime/schedule_manager/system_params/: mod.rs  system_local.rs  system_param.rs  system_query.rs  system_resource.rs  system_schedule_data.rs
src/physics/: mod.rs  physics_world.rs  systems.rs
src/physics/components/: general.rs  mod.rs
src/physics/systems/: collider.rs  mod.rs  rigid_body.rs
src/rendering/: aspect_ratio.rs  asset.rs  draw_pass.rs  lights.rs  material.rs  mod.rs  render_resources.rs  text.rs
src/rendering/asset_loaders/: file_resource_loader.rs  obj_loader.rs
src/rendering/buffer_manager/: buffer_manager.rs  managed_buffer.rs  mod.rs
src/rendering/builtin_materials/: mod.rs
src/rendering/builtin_materials/light_material/: instance_data.rs  material.rs
src/rendering/camera/: camera.rs
src/rendering/managers/: input.rs  mod.rs  new.rs  render.rs  resize.rs  update.rs
src/rendering/mesh/: mesh.rs
src/rendering/render_entity/: instancing.rs  mod.rs  render_entity.rs
src/rendering/resource_loaders/: file_resource_loader.rs  mod.rs
src/rendering/systems/: general.rs
src/rendering/texture/: texture.rs
utils/: build.zig  build.zig.zon
utils/src/: lib.zig
zchan/: build.zig
zchan/src/: lib.zig  main.zig
(+4 files in other folders)
