[package]
name = "krajc"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

exclude = ["resources/*"]

[lib]
proc-macro = true

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
env_logger = "0.11.3"
log = "0.4.21"
wgpu = "0.18"
winit = "0.28"
bytemuck = { version = "1.15.0", features = ["derive"] }
image = { version = "0.25.1", features = ["png", "jpeg"] }
anyhow = "1.0.81"
cgmath = "0.18.0"
ordered-float = "4.2.0"
dyn-clone = "1.0.17"
mopa = "0.2.2"
lazy_static = "1.4.0"
pollster = "0.3.0"
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
queues = "1.1.0"

#legion = {path = "../legion-krajc"}
bevy_ecs = {path = "../bevy-ecs/"}
proc-macro2 = "1.0.86"
flume = "0.11.0"
rapier3d = { version = "0.21.0", features = ["parallel", "simd-nightly"] }
bimap = "0.6.3"
tracing-tracy = "0.11.1"

[build-dependencies]
clippy = "0.0.302"


[features]
prod = []

[profile.release]
opt-level = 3
codeget-units = 1

[profile.dev]
debug = true
strip = false


[profile.dev.package.rapier3d]
opt-level = 3
